# proxinea-awesometel

./: pyproject.toml  shell.nix
awesometel/: utils.py
dbt-project/awesometel_datamart/: dbt_project.yml
dbt-project/awesometel_datamart/macros/: get_time_series_bounds.sql
dbt-project/awesometel_datamart/models/input/awesometel/: _inp_awesometel__models.yml  _inp_awesometel__sources.yml  inp_awesometel__accounts.sql  inp_awesometel__interactions.sql  inp_awesometel__product_holdings.sql
dbt-project/awesometel_datamart/models/marts/churn/: _churn__models.yml  churns.sql
dbt-project/awesometel_datamart/models/staging/awesometel/: _awesometel__models.yml  stg_awesometel__accounts.sql  stg_awesometel__interactions.sql  stg_awesometel__product_holdings.sql
dbt-project/awesometel_datamart/tests/: assert_churned_and_non_churned_users_mutually_exclusive.sql  assert_holdings_ranges_are_valid.sql  assert_tenure_greater_than_0.sql  assert_weird_accounts_age_are_flagged.sql
notebooks/: churn_analysis.ipynb  test.ipynb
